Fixing the header with nav and footer align

--- a/29-grid-portfolio/css/components/footer.css
+++ b/29-grid-portfolio/css/components/footer.css
@@ -5,9 +5,9 @@ body > footer {
   padding-block-start: 0.75rem;
   display: grid;
   grid-template-columns: repeat(6, 145px);
-  column-gap: 15px;
   row-gap: 30px;
-
+  column-gap: 15px;
+  margin-block-end: 2rem;
 }
 
 body > footer p {
@@ -24,7 +24,7 @@ body > footer a:hover {
 }
 
 body > footer p:last-child {
-
+  grid-column: 6 / 7;
 }
 
 body > footer p:last-child a {
@@ -40,7 +40,7 @@ body > footer p:last-child a::before {
   left: 0;
   filter: grayscale(1);
 }
-
+/*
 body > footer p:nth-of-type(1) {
   display: grid;
   grid-column: 6 / 1;
@@ -50,3 +50,4 @@ body > footer p:nth-of-type(2) {
   display: grid;
   grid-column: 6 / 7;
 }
+*/
