--- a/29-grid-portfolio/css/components/header.css
+++ b/29-grid-portfolio/css/components/header.css
@@ -3,15 +3,12 @@ body > header {
   grid-template-columns: repeat(6, 145px);
   column-gap: 15px;
   row-gap: 30px;
+  align-items: end;
 }
 
 body > header h1 {
   border-block-end: 1px solid #4d4d4d;
-  display: grid;
-  grid-template-columns: repeat(6, 145px);
-  column-gap: 15px;
-  row-gap: 30px;
-  grid-column: 1 / 2;
+
 }
 
 body > header a {
@@ -29,14 +26,13 @@ body > header a:hover {
 
 body > header nav {
   font-size: 1rem;
-  margin-block-start: 45px;
 }
 
 body > header h1 {
   font-size: 1.25rem;
 }
 
-body > header ul {
+body > header nav ul {
   list-style: none;
   margin: 0;
   padding: 0;
